--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </header>
       <main>
         <section class="profile container">
-          <div class="profile__contentWrapper">
+          <div class="profile__content-wrapper">
             <img src="./images/profile_image.jpg" alt="фотография профиля" class="profile__image" />
             <div class="profile__info">
               <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -41,7 +41,7 @@
                 class="elements__img"
               />
               <div class="elements__wrapper">
-                <h2 class="elements__title">Карачаевск rfhfxxxxx</h2>
+                <h2 class="elements__title">Карачаевск</h2>
                 <button
                   type="button"
                   class="elements__like-button"
@@ -111,29 +111,18 @@
           </ul>
         </section>
       </main>
-      <footer class="footer container"><p class="footer__text">&copy 2023 Mesto Russia</p></footer>
-      <div id="edit-popup" class="popup">
-        <div class="popup__content">
+      <footer class="footer container"><p class="footer__text">&copy; 2023 Mesto Russia</p></footer>
+      <div class="popup">
+        <div class="popup__container">
           <h2 class="popup__title">Редактировать профиль</h2>
-          <form id="edit-form" class="popup__container" name="popupForm">
-            <input
-              id="input-title"
-              type="text"
-              class="popup__input popup__input_type_name"
-              placeholder="Имя"
-            />
-            <input
-              id="input-subtitle"
-              type="text"
-              class="popup__input popup__input_type_job"
-              placeholder="Работа"
-            />
+          <form class="popup__form" name="popupForm">
+            <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" />
+            <input type="text" class="popup__input popup__input_type_job" placeholder="Работа" />
             <button type="submit" class="popup__button">Сохранить</button>
           </form>
 
           <button
             type="button"
-            id="close-popup-button"
             class="popup__close-button"
             aria-label="Кнопка закрытия редактирования"
           ></button>
