--- a/index.html
+++ b/index.html
@@ -33,101 +33,82 @@
           ></button>
         </section>
         <section class="elements container">
-          <ul class="elements__items">
-            <li class="elements__item">
-              <img
-                src="./images/karachaevsk.jpg"
-                alt="Монастырь на фоне гор"
-                class="elements__img"
-              />
-              <div class="elements__wrapper">
-                <h2 class="elements__title">Карачаевск</h2>
-                <button
-                  type="button"
-                  class="elements__like-button"
-                  aria-label="Кнопка лайка"
-                ></button>
-              </div>
-            </li>
-            <li class="elements__item">
-              <img src="./images/elbrus.png" alt="Поля и гора Эльбрус" class="elements__img" />
-              <div class="elements__wrapper">
-                <h2 class="elements__title">Гора Эльбрус</h2>
-                <button
-                  type="button"
-                  class="elements__like-button"
-                  aria-label="Кнопка лайка"
-                ></button>
-              </div>
-            </li>
-            <li class="elements__item">
-              <img src="./images/dombai.png" alt="Горы на фоне леса" class="elements__img" />
-              <div class="elements__wrapper">
-                <h2 class="elements__title">Домбай</h2>
-                <button
-                  type="button"
-                  class="elements__like-button"
-                  aria-label="Кнопка лайка"
-                ></button>
-              </div>
-            </li>
-            <li class="elements__item">
-              <img src="./images/dagestan.avif.avif" alt="Деревня в горах" class="elements__img" />
-              <div class="elements__wrapper">
-                <h2 class="elements__title">Дагестан</h2>
-                <button
-                  type="button"
-                  class="elements__like-button"
-                  aria-label="Кнопка лайка"
-                ></button>
-              </div>
-            </li>
-            <li class="elements__item">
-              <img src="./images/arhys.avif.avif" alt="Монастырь в горах" class="elements__img" />
-              <div class="elements__wrapper">
-                <h2 class="elements__title">Архыз</h2>
-                <button
-                  type="button"
-                  class="elements__like-button"
-                  aria-label="Кнопка лайка"
-                ></button>
-              </div>
-            </li>
-            <li class="elements__item">
-              <img
-                src="./images/poperechnaya-gora.avif.avif"
-                alt="Поперечная гора в тумане"
-                class="elements__img"
-              />
-              <div class="elements__wrapper">
-                <h2 class="elements__title">Поперечная гора</h2>
-                <button
-                  type="button"
-                  class="elements__like-button"
-                  aria-label="Кнопка лайка"
-                ></button>
-              </div>
-            </li>
-          </ul>
+          <ul class="elements__items"></ul>
         </section>
       </main>
       <footer class="footer container"><p class="footer__text">&copy; 2023 Mesto Russia</p></footer>
-      <div class="popup">
+      <div class="popup popup__profile-edit">
         <div class="popup__container">
           <h2 class="popup__title">Редактировать профиль</h2>
-          <form class="popup__form" name="popupForm">
-            <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" />
-            <input type="text" class="popup__input popup__input_type_job" placeholder="Работа" />
+          <form class="popup__form popup__form_profile" name="popupForm">
+            <input type="text" class="popup__input popup__input_profile_name" placeholder="Имя" />
+            <input type="text" class="popup__input popup__input_profile_job" placeholder="Работа" />
             <button type="submit" class="popup__button">Сохранить</button>
           </form>
 
           <button
             type="button"
-            class="popup__close-button"
-            aria-label="Кнопка закрытия редактирования"
+            class="popup__close-button popup__close-button_profile"
+            aria-label="Кнопка закрытия редактирования профиля"
+          ></button>
+        </div>
+      </div>
+      <div class="popup popup__card">
+        <div class="popup__container">
+          <h2 class="popup__title">Новое место</h2>
+          <form class="popup__form popup__form_card" name="popupForm">
+            <input
+              type="text"
+              class="popup__input popup__input_card_name"
+              placeholder="Название"
+              name="name"
+            />
+            <input
+              type="text"
+              class="popup__input popup__input_card_link"
+              placeholder="Ссылка на картинку"
+              name="link"
+            />
+            <button type="submit" class="popup__button">Создать</button>
+          </form>
+
+          <button
+            type="button"
+            class="popup__close-button popup__card_close-button"
+            aria-label="Кнопка закрытия добавления карточек"
+          ></button>
+        </div>
+      </div>
+      <div class="popup popup__image">
+        <div class="popup__image-wrapper">
+          <img
+            src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg"
+            alt="Фото места"
+            class="popup__image-opened"
+          />
+          <p class="popup__image-text">Байкал</p>
+
+          <button
+            type="button"
+            class="popup__close-button popup__image_close-button"
+            aria-label="Кнопка закрытия добавления карточек"
           ></button>
         </div>
       </div>
     </div>
+    <template class="elements__item-template">
+      <li class="elements__item">
+        <img src="" alt="Фото места" class="elements__img" />
+        <div class="elements__wrapper">
+          <h2 class="elements__title"></h2>
+          <button type="button" class="elements__like-button" aria-label="Кнопка лайка"></button>
+        </div>
+        <button
+          type="button"
+          class="elements__delete-button"
+          aria-label="Удаление карточки"
+        ></button>
+      </li>
+    </template>
   </body>
 </html>
