features: add card, active like, delete card, popup picture

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
     <template class="elements__item-template">
       <li class="elements__item">
-        <img src="" alt="Фото места" class="elements__img" />
+        <img alt="Фото места" class="elements__img" />
         <div class="elements__wrapper">
           <h2 class="elements__title"></h2>
           <button type="button" class="elements__like-button" aria-label="Кнопка лайка"></button>
