--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
       </main>
       <footer class="footer container"><p class="footer__text">&copy; 2023 Mesto Russia</p></footer>
-      <div class="popup popup__profile-edit">
+      <div class="popup popup_profile-edit">
         <div class="popup__container">
           <h2 class="popup__title">Редактировать профиль</h2>
           <form class="popup__form popup__form_profile" name="popupForm">
@@ -53,7 +53,7 @@
           ></button>
         </div>
       </div>
-      <div class="popup popup__card">
+      <div class="popup popup_card">
         <div class="popup__container">
           <h2 class="popup__title">Новое место</h2>
           <form class="popup__form popup__form_card" name="popupForm">
@@ -74,12 +74,12 @@
 
           <button
             type="button"
-            class="popup__close-button popup__card_close-button"
+            class="popup__close-button popup__close-button_card"
             aria-label="Кнопка закрытия добавления карточек"
           ></button>
         </div>
       </div>
-      <div class="popup popup__image">
+      <div class="popup popup_image">
         <div class="popup__image-wrapper">
           <img
             src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg"
