Рефакторинг. Класс карточки

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <script src="./scripts/cards.js" defer></script>
+    <!-- <script src="./scripts/cards.js" defer></script> -->
     <script src="./scripts/validate.js" defer></script>
-    <script src="./scripts/index.js" defer></script>
+    <script src="./scripts/index.js" type="module" defer></script>
     <title lang="en">Mesto</title>
   </head>
   <body>
