--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             alt="Фото места"
             class="popup__image-opened"
           />
-          <p class="popup__image-text">Байкал</p>
+          <p class="popup__image-text">Байка</p>
 
           <button
             type="button"
