--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
           <h2 class="popup__title">Редактировать профиль</h2>
           <form class="popup__form popup__form_profile" name="popupForm" novalidate>
             <input
-              name="profileName"
+              name="name"
               type="text"
               id="name-input"
               class="popup__input popup__input_profile_name"
@@ -57,7 +57,7 @@
               <span class="popup__input-error name-input-error"></span>
             </p>
             <input
-              name="profileDetails"
+              name="info"
               type="text"
               id="job-input"
               class="popup__input popup__input_profile_job"
