first review project 9

--- a/src/index.html
+++ b/src/index.html
@@ -100,14 +100,14 @@
                 <form class="popup__form popup__form_avatar" name="popupForm" novalidate>
                   <input
               type="url"
-              id="url-input"
+              id="url-input-avatar"
               class="popup__input popup__input_card_link"
               placeholder="Ссылка на картинку"
               name="link"
               required
             />
             <p class="popup__span-paragraph">
-              <span class="popup__input-error url-input-error"></span>
+              <span class="popup__input-error url-input-avatar-error"></span>
             </p>
                   <button type="submit" class="popup__button popup__button_avatar">
                     Сохранить
